CODENVY-1756: fix tabs flickering on billing page (#1892)

--- a/dashboard/src/app/billing/billing.styl
+++ b/dashboard/src/app/billing/billing.styl
@@ -7,3 +7,15 @@
 
   .billing-summary
     margin 20px 14px 0
+
+md-tabs.billing-tabs
+  md-tabs-canvas
+    width 100%
+    text-align center
+
+  md-pagination-wrapper
+    position relative
+    display inline-block
+
+  md-tab-content
+    height 100%
